# fundamental-analysis

./: .coveragerc  .gitignore  .pyproject.toml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  SECURITY.md  auto-format.sh  index.html  mkdocs.yml  objects.inv  pydocktest.json  pyproject.toml  requirements-dev.txt  requirements.txt  smoke-test.sh  verify-packaging.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  docs.yml  publish-pypi.yml  python.yml  release-test.yml  release.yml
analysis/annual-reports/: index.html
analysis/diluted-eps/: index.html
analysis/f-score/: index.html
analysis/tensorflow/: index.html
design/: index.html
design/analysis/: index.html
design/caching/: index.html
design/data-retrieval/: index.html
design/reference/: index.html
design/report/: index.html
docs/: gen_ref_pages.py  getting-started.md  index.md  mkdocs.yml
docs/analysis/: annual-reports.md  diluted-eps.md  f-score.md  tensorflow.md
docs/design/: caching.md  index.md  reference.md  report.md
docs/docs/: getting-started.md  index.md
docs/docs/design/: analysis.md  data-retrieval.md  overview.md  reference.md  report.md
getting-started/: index.html
reference/SUMMARY/: index.html
reference/src/stocktracer/: index.html
reference/src/stocktracer/analysis/: index.html
reference/src/stocktracer/analysis/annual_reports/: index.html
reference/src/stocktracer/analysis/diluted_eps/: index.html
reference/src/stocktracer/analysis/f_score/: index.html
reference/src/stocktracer/analysis/stub/: index.html
reference/src/stocktracer/analysis/tensorflow/: index.html
reference/src/stocktracer/cache/: index.html
reference/src/stocktracer/cli/: index.html
reference/src/stocktracer/collector/: index.html
reference/src/stocktracer/collector/sec/: index.html
reference/src/stocktracer/filter/: index.html
reference/src/stocktracer/interface/: index.html
search/: search_index.json
sfa/: analyze
sfa/analysis/: ratios.py
sfa/data/: source.py  yfinance.py
src/: conftest.py
src/stocktracer/: __init__.py  __main__.py  cache.py  cli.py  filter.py  interface.py  settings.py
src/stocktracer/analysis/: __init__.py  annual_reports.py  diluted_eps.py  f_score.py  stub.py  tensorflow.py
src/stocktracer/collector/: sec.py
src/stocktracer/data/: __init__.py  sec.py
src/tests/: .gitignore  test_cli.py  test_filter.py  test_main.py  test_sec.py  test_sec_network.py  test_xbrl.py
src/tests/analysis/: test_annual_reports.py  test_diluted_eps.py  test_f_score.py  test_stub.py  test_tensorflow.py
src/tests/fixtures/: network.py  unit.py
src/tests/fixtures/network/: sec.py
src/tests/sec/: test_DataSelector.py  test_DataSetReader.py  test_filter.py  test_network.py  test_sec.py
src/ticker/: __main__.py  filter.py
src/ticker/analysis/: stub.py
tests/: test_filter.py  test_sec.py  test_sec_network.py  test_stub.py
tests/analysis/: test_diluted_eps.py  test_stub.py
tests/fixtures/network/: __init__.py  sec.py
tests/integration/: test_yfinance.py
tests/unit/: test_sample.py  test_sec.py  test_stub.py  test_xbrl.py
ticker/: __init__.py  __main__.py  analysis.py  cli.py  filter.py  pydocktests.json
ticker/analysis/: diluted_eps.py  dilutedeps.py  ratios.py  stub.py
ticker/data/: sec.py  source.py  yfinance.py
